compiling_error.txt
/home/osboxes/Documents/Cpp/cabinet/main.cpp:124:25: error: declaration of ‘rdv::rdv(date)’ outside of class is not definition [-fpermissive]
   rdv::rdv(date date_rdv);){
                         ^
/home/osboxes/Documents/Cpp/cabinet/main.cpp:124:27: error: expected unqualified-id before ‘)’ token
   rdv::rdv(date date_rdv);){
                           ^
